2003-12-19  Alexander Larsson  <alexl@redhat.com>

	* libgnomeui/gnome-icon-lookup.h:
	Include gnome-icon-theme.h for backwards compat.

2003-12-18  Alexander Larsson  <alexl@redhat.com>

	* libgnomeui/gnome-icon-theme.c:
	Fix typo that broke build

2003-12-18  Alexander Larsson  <alexl@redhat.com>

	* libgnomeui/gnome-icon-lookup.c: 
	* libgnomeui/gnome-icon-theme.[ch]:
	Remove/Internalize some new api I accidentally added

2003-12-18  Alexander Larsson  <alexl@redhat.com>

        * doc/reference/tmpl/gnome-icon-theme.sgml:
	* doc/reference/tmpl/gnome-icon-lookup.sgml:
	Update
	
	* libgnomeui/gnome-icon-lookup.[ch]:
	Use GtkIconThemes instead, but accept GnomeIconThemes for
	backwards compat.

	* libgnomeui/gnome-icon-theme.[ch]:
	Turn into a GtkIconTheme wrapper
	
2003-12-17  Mark McLoughlin  <mark@skynet.ie>

	* libgnomeui/gnome-multiscreen.c: (make_environment_for_screen):
	Fix silly where we weren't actually setting $DISPLAY. Similar
	patch from Vijaykumar Patwari in bug #129516.

2003-12-14  Fernando Herrera  <fherrera@onirica.com>

	* configure.in: requiere gnome-vfs-2.0 >= 2.5.3 for new auth sutff

2003-12-11  Mark McLoughlin  <mark@skynet.ie>

	* libgnomeui/libgnomeui.h: include gnome-help.h
	and gnome-url.h

2003-12-10  Richard Hult  <richard@imendio.com>

	* doc/reference/Makefile.am (install-data-local): Install the
	devhelp file.

2003-12-08  Anders Carlsson  <andersca@gnome.org>

	* configure.in: Release 2.5.1

2003-12-06  Anders Carlsson  <andersca@gnome.org>

	* libgnomeui/pixmaps/stock_attach.png:
	* libgnomeui/pixmaps/stock_book_blue.png:
	* libgnomeui/pixmaps/stock_book_green.png:
	* libgnomeui/pixmaps/stock_book_open.png:
	* libgnomeui/pixmaps/stock_book_red.png:
	* libgnomeui/pixmaps/stock_book_yellow.png:
	* libgnomeui/pixmaps/stock_line_in.png:
	* libgnomeui/pixmaps/stock_mail.png:
	* libgnomeui/pixmaps/stock_mail_compose.png:
	* libgnomeui/pixmaps/stock_mail_forward.png:
	* libgnomeui/pixmaps/stock_mail_receive.png: